Java 10 readiness